Fix overflowing site width on 320px screens

--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -336,6 +336,7 @@
       margin-left: 4%;
       > li {
         margin-bottom: 1em;
+        max-width: 100%;
       }
     }
   }
